[Omnibox] set color of icons on invalidate

This Cl updates the color of icons in invalidate (e.g. selection or theme
changes).

Bug: 821342
Change-Id: Icbd861b443ed9d0125121641f94e1ec6aeb1865c
Reviewed-on: https://chromium-review.googlesource.com/962680
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Reviewed-by: Kevin Bailey <krb@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543468}
Former-commit-id: 6240b88a0fc429b7cf58cd396c1a2927a78190c4